yellow and pink

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Stylist assistant</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Stylist assistant.  Hello, bootstrap!</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
 </head>
 <body>
-
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
+<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<div class="container">
+    <div class="row" style="">
+        <div class="col-sm-4" style="height: 700px; background-color: yellow"></div>
+        <div class="col-sm-8" style="height: 700px;background-color: pink"></div>
+    </div>
+</div>
 </body>
 </html>
