--- a/index.html
+++ b/index.html
@@ -11,32 +11,39 @@
 </head>
 <body>
 <style>
-    .issues img {
+    #issues img {
+        position: absolute;
         width: 120px;
         height: 120px;
     }
 </style>
 <div class="container">
     <div class="row" style="">
-        <div class="col-sm-4" style="height: 700px; background-color: yellow"></div>
-        <div class="col-sm-8" style="height: 700px;background-color: white">
+        <div class="col-sm-6" style="height: 700px; background-color: white"></div>
+        <div class="col-sm-6" style="height: 700px;background-color: yellow">
             <ul class="nav nav-pills">
                 <li role="presentation" class="active"><a href="#">Male</a></li>
                 <li role="presentation"><a href="#">Female</a></li>
                 <li role="presentation"><a href="#">Colors</a></li>
                 <li role="presentation"><a href="#">Budget</a></li>
             </ul>
-            <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="#">1</a></li>
-                <li role="presentation"><a href="#">2</a></li>
-                <li role="presentation"><a href="#">3</a></li>
-                <li role="presentation"><a href="#">4</a></li>
-                <li role="presentation"><a href="#">5</a></li>
-            </ul>
-            <div class="issues" style="border-color: black">
-                <div id="resizable">resizable</div>
-                <img src="dresses/top01.jpg">
-                <img src="dresses/down01.jpg">
+            <!--<ul class="nav nav-tabs">-->
+                <!--<li role="presentation" class="active"><a href="#">1</a></li>-->
+                <!--<li role="presentation"><a href="#">2</a></li>-->
+                <!--<li role="presentation"><a href="#">3</a></li>-->
+                <!--<li role="presentation"><a href="#">4</a></li>-->
+                <!--<li role="presentation"><a href="#">5</a></li>-->
+            <!--</ul>-->
+            <div id="issues" style="position: relative; border-color: black">
+                <!--<form><input id="screen" type="button" value="screen"></form>-->
+
+                <img id="top01" src="dresses/top01.jpg" style="left: 10px; top: 10px;">
+                <img id="down01" src="dresses/down01.jpg" style="left: 130px; top: 10px">
+                <img id="shoes01" src="dresses/shoes01.jpg" style="left: 250px; top: 10px">
+
+                <img id="top02" src="dresses/top02.jpg" style="left: 10px; top: 140px">
+                <img id="stop01" src="dresses/stop01.jpg" style="left: 130px; top: 140px">
+                <img id="acc01" src="dresses/acc01.jpg" style="left: 250px; top: 140px">
             </div>
         </div>
     </div>
@@ -44,13 +51,56 @@
 <script src="bower_components/jquery/dist/jquery.min.js"></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script src="html2canvas.js"></script>
 <script>
-    $('.issues img').draggable();
-    //$('.issues img').resizable();
+    var modeDrag = true;
+    var issuesSelector = null;
+
+
+
+    $('#issues').click(function (e) {
+        issuesSelector = $(e.target);
+//        issuesSelector.hide();
+//        issuesSelector.draggable('destroy');
+//        issuesSelector.resizable();
+
+        if (modeDrag) {
+//            alert(e+'resizableMode - turned on');
+            modeDrag = false;
+            issuesSelector.draggable('destroy');
+            issuesSelector.resizable();
+        }
+        else {
+//            alert('modeDrag - turned on');
+            modeDrag = true;
+            issuesSelector.resizable('destroy');
+            issuesSelector.draggable();
+        }
+    });
+    //$('.issues img').draggable();
+    $('#top01').draggable();
+    $('#top02').draggable();
+    $('#stop01').draggable();
+    $('#down01').draggable();
+    $('#shoes01').draggable();
+    $('#acc01').draggable();
+
 
     $(document).ready(function () {
         //$('.issues img').resizable();
     });
+
+//    $('#screen').click(function () {
+//        alert("screen");
+//        html2canvas(document.body, {
+//            onrendered: function (canvas) {
+//                document.body.appendChild(canvas);
+//            },
+//            width: 400,
+//            height: 300
+//        });
+//    });
 </script>
 </body>
 </html>
+
