--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         height: 120px;
     }
 
+    li {
+        height: 38px;
+    }
+
+    a {
+        color: #fcfeee;
+        font-size: 15px;
+        font-weight: 100;
+        letter-spacing: 1.2px;
+    }
+
     #active {
         border-bottom: 1px solid white;
     }
@@ -24,7 +35,7 @@
 <div class="container">
     <div class="row" style="">
         <div class="col-sm-8" style="height: 700px; background-color: white"></div>
-        <div class="col-sm-4" style="height: 700px;background-color: rgb(223, 242, 231)">
+        <div class="col-sm-4" style="height: 700px;background-color: #d1d6e8">
             <ul class="nav nav-pills">
                 <li role="presentation" id="active"><a href="#">Male</a></li>
                 <li role="presentation"><a href="#">Female</a></li>
