--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     }
 
     a {
-        color: #fcfeee;
+        color: #000;
         font-size: 15px;
-        font-weight: 100;
+        font-weight: 200;
         letter-spacing: 1.2px;
     }
 
@@ -35,7 +35,7 @@
 <div class="container">
     <div class="row" style="">
         <div class="col-sm-8" style="height: 700px; background-color: white"></div>
-        <div class="col-sm-4" style="height: 700px;background-color: #d1d6e8">
+        <div class="col-sm-4" style="height: 700px;background-color: #eee">
             <ul class="nav nav-pills">
                 <li role="presentation" id="active"><a href="#">Male</a></li>
                 <li role="presentation"><a href="#">Female</a></li>
