--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Stylist assistant. Hello, bootstrap!</title>
+    <title>Stylist assistant. Hello, bootstrap</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link type="text/css" href="bower_components/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet"/>
 
