grouping by size and price

--- a/client/main.html
+++ b/client/main.html
@@ -9,6 +9,7 @@
 <template name="issues">
     <ul>
         {{#each mobj}}
-        <li><i>{{_id}}</i> with {{name}}-{{pickup}}{{/each}}</li>
+        <li><i>{{_id}}</i> with {{name}}-{{pickup}}</li>
+        {{/each}}
     </ul>
 </template>
