render minibase to html with strange _ids

--- a/client/main.html
+++ b/client/main.html
@@ -9,7 +9,7 @@
 <template name="issues">
     <ul>
         {{#each mobj}}
-        <li><i>{{_id}}</i> with {{name}}-{{pickup}}</li>
+        <li><i>{{_id}}</i> with {{description}}</li>
         {{/each}}
     </ul>
 </template>
